# VapeCommander

./: .gitignore  Anchor.toml  Cargo.toml  README.md  REWARD_TOKEN_README.md  check_accounts.js  create_reward_token.js  device_registration_final.dart  env.example  flutter_device_registration_demo.dart  initialize_config_broadcast.js  initialize_contract.js  initialize_contract.ts  initialize_contract_direct.js  initialize_contract_direct_v2.js  onchain_query_demo.dart  package.json  pubspec.yaml  query_demo.dart  query_devices_accurate_demo.dart  query_devices_demo.dart  register_device_again.js  register_device_anchor.js  register_device_on_devnet.js
metadata/: vapecommander_smoke.json
programs/vapecommander_rewards/: Cargo.toml
programs/vapecommander_rewards/src/: lib.rs
scripts/: device_utils.ts  find-config.ts  init_reward_mint.ts  init_simple.ts  initialize_rewards.ts
tests/: README.md  reward_system_test.ts  vapecommander_rewards.ts
